# spoker

./: Cargo.toml  README.md  flake.nix  justfile
assets/: Map.blend
components/: Cargo.toml
components/src/: lib.rs  player.rs  settings.rs
crates/common/: Cargo.toml
crates/common/src/: input.rs  lib.rs  physics.rs
crates/common/src/debug/: mod.rs
crates/common/src/ext/: arring.rs  f32.rs  input.rs  mod.rs  vec3.rs
crates/common/src/ext/commands/: mod.rs
crates/common/src/ext/ui/: mod.rs
crates/editor/: Cargo.toml  Readme.md
crates/editor/src/: camera.rs  lib.rs  main.rs  move.rs  select.rs
crates/editor/src/csg/: convert.rs  mod.rs
crates/editor/src/csg/brush_mesh/: iter.rs  mod.rs
crates/editor/src/csg/operations/: mod.rs
crates/editor/src/ui/: hierarchy_view.rs  map_view.rs  mod.rs
crates/spoker/: Cargo.toml
crates/spoker/assets/: Map.blend1  Map.glb  PlayerMovementWithStrafes.cs
crates/spoker/assets/textures/Pre/: dev_balck.aseprite
crates/spoker/src/: lib.rs  main.rs
crates/spoker/src/components/: player.rs
crates/spoker/src/debug/: mod.rs  player.rs
crates/spoker/src/environement/: mod.rs
crates/spoker/src/ext/: hierarchy_rel.rs  prev.rs
crates/spoker/src/geometry/: meshgen.rs
crates/spoker/src/player/: components.rs  mod.rs
crates/spoker/src/systems/: mod.rs
crates/spoker/src/ui/: mod.rs  speed_text.rs
old/geometry/: intersections.rs
old/physics/: bsp.rs  mod.rs
scripts/: acceleration.py  deceleration.py
src/: lib.rs  main.rs
src/common/: input.rs  mod.rs  physics.rs
src/common/ext/: input.rs  mod.rs  setting.rs  vec3.rs
src/common/ext/ui/: mod.rs
src/common/geometry/: intersection.rs  mod.rs
src/components/: mod.rs  player.rs
src/editor/: camera.rs  mod.rs  move.rs  run.rs  select.rs
src/editor/csg/: commands.rs  convert.rs  hierarchy.rs  mod.rs
src/editor/csg/brush_mesh/: iter_mut.rs  mod.rs
src/editor/csg/operations/: clip.rs  mod.rs  triangulate.rs
src/editor/ui/: hierarchy_view.rs  mod.rs  view.rs
src/ext/: mod.rs  prev.rs
src/game/: mod.rs
src/game/debug/: mod.rs  player.rs
src/game/environement/: mod.rs
src/game/player/: components.rs  mod.rs
src/game/player/systems/: movement.rs  old_movement.rs
src/game/render/: cavity.rs  mod.rs
src/game/ui/: mod.rs  speed_text.rs
src/geometry/: mod.rs
src/main_menu/: mod.rs
src/physics/: physmat.rs
src/settings/: mod.rs  movement.rs  player.rs
src/systems/: mod.rs  settings.rs
src/systems/player/: debug.rs  mod.rs
systems/: Cargo.toml
systems/src/: lib.rs  player.rs  settings.rs
(+5 files in other folders)
