[package]
name = "spoker"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
aery = { workspace = true }
bevy_rapier3d = { workspace = true }
leafwing-input-manager = { workspace = true }

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies.bevy]
version = "0.13"
features = [
    "dynamic_linking",
    "wayland"
] 

[workspace.dependencies]
leafwing-input-manager = "0.13"
# leafwing_input_playback
#seldom_state = "0.10"
aery = "0.6"
bitflags = "2.4"
bevy_rapier3d = "0.25"
