[package]
name = "systems"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
bevy = { workspace = true }
leafwing-input-manager = { workspace = true }
components = { path = "../components" }

[features]
default = []
dynamic = ["bevy/dynamic_linking", "components/dynamic"]
